<resources>
    <string name="app_name">Github Repo</string>

    <string name="bottom_home">홈</string>
    <string name="bottom_profile">프로필</string>

    <string name="logout_confirm">로그아웃 하시겠습니까?</string>

    <string name="check">확인</string>
    <string name="cancel">취소</string>

    <string name="retry">재시도</string>

    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="login_description">개인 계정을 사용해서 GitHub.com 에 로그인</string>

    <string name="repository">레파지토리</string>

    <string name="star_count">별 %d개</string>
    <string name="fork_count">포크 %d개</string>
</resources>