package com.prac.feature.profile

import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.isNotDisplayed
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import com.prac.core.designsystem.R
import com.prac.feature.profile.view.ProfileScreen
import com.prac.shared_test.HiltTestActivity
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.test.runTest
import org.junit.Before
import org.junit.Rule
import org.junit.Test

@HiltAndroidTest
class ProfileScreenTest {

    @get:Rule(order = 0)
    var hiltRule = HiltAndroidRule(this)

    @get:Rule(order = 1)
    val composeTestRule = createAndroidComposeRule<HiltTestActivity>()
    private val activity get() = composeTestRule.activity

    private var isLoginScreen = false

    @Before
    fun setup() {
        hiltRule.inject()
        setContent()
    }

    @Test
    fun loginButtonClick_showLogoutAlertDialog() = runTest {
        composeTestRule.onNodeWithText(activity.getString(R.string.logout)).performClick()

        composeTestRule.onNodeWithText(activity.getString(R.string.logout_confirm)).assertIsDisplayed()
    }

    @Test
    fun loginButtonClick_showLogoutAlertDialog_cancelButtonClick() = runTest {
        composeTestRule.onNodeWithText(activity.getString(R.string.logout)).performClick()

        composeTestRule.onNodeWithText(activity.getString(R.string.logout_confirm)).assertIsDisplayed()

        composeTestRule.onNodeWithText(activity.getString(R.string.cancel)).performClick()

        composeTestRule.waitUntil {
            composeTestRule.onNodeWithText(activity.getString(R.string.logout_confirm)).isNotDisplayed() && !isLoginScreen
        }
    }

    @Test
    fun loginButtonClick_showLogoutAlertDialog_checkButtonClick() = runTest {
        composeTestRule.onNodeWithText(activity.getString(R.string.logout)).performClick()

        composeTestRule.onNodeWithText(activity.getString(R.string.logout_confirm)).assertIsDisplayed()

        composeTestRule.onNodeWithText(activity.getString(R.string.check)).performClick()

        composeTestRule.waitUntil {
            composeTestRule.onNodeWithText(activity.getString(R.string.logout_confirm)).isNotDisplayed() && isLoginScreen
        }
    }

    private fun setContent() {
        composeTestRule.setContent {
            ProfileScreen(
                onNavigateToLogin = { isLoginScreen = true }
            )
        }
    }
}